fix(activities): align title and content

--- a/css/section/activities.css
+++ b/css/section/activities.css
@@ -7,7 +7,7 @@
   width: 100%;
   /* height: 50vh; */
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
 }
 
 .activity-row {
